# sandboxes

./: .env.example  .gitignore  README  README.md  docker-compose.yml  nginx.conf
.github/workflows/: angular-cd.yaml  angular.yaml  blazor-cd.yaml  blazor-ci.yaml  cd-rust.yaml  ci..yaml  ci.yaml  elm-cd.yaml  elm-ci.yaml  go-cd.yaml  go-ci.yaml  haskell-cd.yaml  haskell.yaml  nestjs-cd.yaml  nestjs.yaml  nextjs-cd.yaml  nextjs-ci.yaml  nextjs.yaml  rust-cd.yaml  rust-ci.yaml  rust.yaml  vuejs-cd.yaml  vuejs-ci.yaml
angular/: .dockerignore  .env.example  .gitignore  Dockerfile  angular.json  package-lock.json  package.json  tsconfig.json
angular/src/: server.ts
angular/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
angular/src/app/cats/: cats.component.html  cats.component.spec.ts  cats.component.ts  cats.service.spec.ts  cats.service.ts  index.ts
angular/src/app/posts/: index.ts  posts.component.html  posts.component.spec.ts  posts.component.ts  posts.service.spec.ts  posts.service.ts
arkhn/backend/: main.py
arkhn/backend/arkhn_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
arkhn/backend/backend/: settings.py  urls.py
arkhn/frontend/: package-lock.json  package.json
arkhn/frontend/src/actions/: index.ts
arkhn/frontend/src/app/: layout.tsx  page.tsx
arkhn/frontend/src/backend/: index.ts
arkhn/frontend/src/web/: index.ts
blazor/: .gitignore  Dockerfile  blazor.dockersln  blazor.sln
blazor/Domain/: Domain.fsproj  Library.fs  Weather.fs
blazor/DomainTest/: DomainTest.fsproj  LibraryTest.fs
blazor/Shell/: BlazorDbContext.cs  Program.cs  Shell.csproj  appsettings.Development.json  appsettings.json
blazor/Shell/Components/: App.razor  _Imports.razor
blazor/Shell/Components/Pages/: Counter.razor  Weather.razor
blazor/Shell/Db/: ShellDbContext.cs  WeatherForecast.cs
blazor/Shell/Migrations/: 20250425140453_InitialCreate.Designer.cs  20250425140453_InitialCreate.cs  BlazorDbContextModelSnapshot.cs  ShellDbContextModelSnapshot.cs
blazor/Shell/Models/: WeatherForecast.cs
blazor/ShellTest/: CounterTest.cs  ShellTest.csproj  UnitTest1.cs
blazor/app/: Program.cs  app.csproj
blazor/app/Components/: App.razor  _Imports.razor
blazor/app/Components/Layout/: NavMenu.razor
blazor/app/Components/Pages/: Counter.razor  Home.razor
blazor/app/Properties/: launchSettings.json
blazor/domain/: Lib.fs  Library.fs  domain.fsproj
blazor/test/: UnitTest1.cs  test.csproj
elm/: .gitignore  Dockerfile
elm/src/: Health.elm  Main.elm  Posts.elm
elm/tests/: Bogus.elm
go/: .env.example  .gitignore  Dockerfile  go.mod  go.sum  mail.go  main.go  rmq.go
haskell/: Dockerfile  haskell.cabal
haskell/app/: Main.hs
haskell/lib/: Schedule.hs
haskell/tests/: ScheduleTest.hs
nestjs/: .dockerignore  .env.example  .gitignore  Dockerfile  Worker.Dockerfile  datasource.ts  nest-cli.json  package-lock.json  package.json  tsconfig.build.json
nestjs/apps/server/src/: graphql.options.ts  main.ts  server.module.ts
nestjs/apps/server/test/: app.e2e-spec.ts
nestjs/apps/worker/src/: main.ts  models.ts  worker.controller.spec.ts  (+3 more)
nestjs/migrations/: 1744707159613-initial.ts  1746433942719-rem-post-published.ts  1746449430256-add-post-author.ts  1746452176042-default-typeorm-namming.ts  1746510954967-create-place.ts
nestjs/src/: app.module.ts  graphql.options.ts  main.ts  typeorm.options.ts
nestjs/src/cat/: cat.service.ts
nestjs/src/post/: cat.entity.ts  cat.resolver.ts  cat.service.ts  post.controller.spec.ts  post.controller.ts  post.entity.ts  post.module.ts  post.resolver.ts  post.service.spec.ts  post.service.ts
nextjs/: .dockerignore  .env.example  .gitignore  Dockerfile  Worker.Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json  webpack.config.js  worker.ts
nextjs/prisma/: schema.prisma
nextjs/src/: datasource.ts  place.entity.ts  post.entity.ts
nextjs/src/actions/: index.ts  place.ts  post.ts
nextjs/src/app/: client-session-provider.tsx  layout.tsx  next-auth-provider.tsx  page.tsx  signin.tsx
nextjs/src/consumers/: index.ts
nextjs/src/domain/: error.ts  index.ts  place.ts  post.spec.ts  post.ts  spec.ts  user.ts
nextjs/src/infrastructure/: index.ts
python/: main.py  models.py
rust/: .env  .env.example  .gitignore  App.Dockerfile  Cargo.toml  Dockerfile  README  Worker.Dockerfile  cargo.toml  default.conf
rust/adapters/: Cargo.toml  diesel.toml
rust/adapters/src/: error.rs  lib.rs  models.rs  schema.patch  schema.rs
rust/application/src/: lib.rs  models.rs
rust/domain/: Cargo.toml
rust/domain/src/: lib.rs
rust/ports/: Cargo.toml
rust/ports/src/: api.rs  auth.rs  error.rs  main.rs  models.rs
rust/shell/: Cargo.toml  diesel.toml
rust/shell/migrations/2025-02-06-102719_add_point_to_posts/: down.sql  up.sql
rust/shell/migrations/2025-03-03-125133_add_user/: up.sql
rust/shell/migrations/2025-03-04-083242_post_add_fk_for_author/: down.sql  up.sql
rust/shell/migrations/2025-03-12-134803_create_places_table/: up.sql
rust/shell/migrations/2025-05-02-083705_drop_post_geom/: down.sql  up.sql
rust/shell/src/: auth.rs  error.rs  lib.rs  main-api.rs  main-app.rs  main-worker.rs  main.rs  redis.rs  rmq.rs  worker.rs
rust/shell/src/api/: error.rs  mod.rs  models.rs  place.rs  post.rs
rust/shell/src/app/: mod.rs
rust/shell/src/db/: mod.rs  models.rs  place.rs  post.rs  schema.patch  schema.rs  user.rs
rust/shell/src/db/models/: mod.rs  post.rs  user.rs
rust/shell/src/rmq/: job.rs  mod.rs  place.rs  post.rs
rust/shell/src/rmqpub/: mod.rs  post.rs
rust/shell/src/rmqsub/: mod.rs  place.rs
vuejs/: Dockerfile  README.md  package-lock.json  package.json
(+64 files in other folders)
